Fixed spacing and added intro to post

--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -3,4 +3,15 @@
     width: 100%;
     height: auto;
   }
+
+  p {
+    line-height: 1em;
+    padding: .25em 0;
+    margin: 0;
+  }
+
+  h4 {
+    margin: .5em 0;
+    padding: 0;
+  }
 }
